Fix website description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Purple Archive",
-  "name": "Store and Share your gartic GIF files!",
+  "name": "Purple Archive: Store and Share your gartic GIF files!",
   "icons": [
     {
       "src": "favicon.ico",
